# kisskh-dl

./: .env.example  .gitignore  README.md  pyproject.toml
src/kisskh_downloader/: cli.py  downloader.py  kisskh_api.py
src/kisskh_downloader/models/: sub.py
tests/: test_kisskh_api.py
tests/models/: test_drama.py
